qtbase-opensource-src (5.15.7+dfsg-1) UNRELEASED; urgency=medium

  [ Simon Quigley ]
  * New upstream release.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 31 Oct 2022 12:36:52 -0500

qtbase-opensource-src (5.15.6+dfsg-3) experimental; urgency=medium

  * Backport upstream patch to fix misplaced menus with Wayland on GNOME.
  * Backport upstream patch to use Wayland platform plugin on GNOME Wayland
    sessions by default (closes: #954781).
  * Update debian/libqt5core5a.symbols for ia64 and sparc64.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 24 Oct 2022 00:43:06 +0300

qtbase-opensource-src (5.15.6+dfsg-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 29 Sep 2022 11:41:52 +0300

qtbase-opensource-src (5.15.6+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Drop patches that are included in the new release:
    - fix-misplacement-of-placeholder-text-in-QLineEdit.diff
    - fix-placement-of-placeholder-text-in-QLineEdits-with-action-icons.diff
    - mysql_remove_version_checks.diff
    - full_width_selection_rtl.diff
    - xcb_add_a_timeout_control_when_reading_INCR_property.diff
    - CVE-2021-38593.diff
    - moc_handle_include.diff
    - remove_limit_on_number_of_streams.diff
  * Update symbols files from buildds’ and current build logs.
  * Revert removal of QtConcurrent::ThreadEngineBase::startBlocking(),
    which is part of public API and used in the wild.
  * Bump ABI version to qtbase-abi-5-15-6.
  * Update debian/copyright (automatically and manually).
  * Exclude chip.debug compiled binary from the tarball.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 11 Sep 2022 11:44:12 +0300

qtbase-opensource-src (5.15.5+dfsg-3) experimental; urgency=medium

  * Merge 5.15.4+dfsg-5 upload from unstable.
  * Update Lintian overrides.
  * Update symbols files from buildds' logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 09 Aug 2022 16:08:10 +0300
