@@ -97,7 +97,7 @@ Last-Update: 2021-12-09
  DEFINEFUNC(int, RSA_bits, RSA *a, a, return 0, return)
  DEFINEFUNC(int, DSA_bits, DSA *a, a, return 0, return)
  DEFINEFUNC(int, OPENSSL_sk_num, OPENSSL_STACK *a, a, return -1, return)
-@@ -368,7 +367,15 @@ DEFINEFUNC(const SSL_CIPHER *, SSL_get_c
+@@ -371,7 +370,15 @@ DEFINEFUNC(const SSL_CIPHER *, SSL_get_c
  DEFINEFUNC(int, SSL_version, const SSL *a, a, return 0, return)
  DEFINEFUNC2(int, SSL_get_error, SSL *a, a, int b, b, return -1, return)
  DEFINEFUNC(STACK_OF(X509) *, SSL_get_peer_cert_chain, SSL *a, a, return nullptr, return)
@@ -113,7 +113,7 @@ Last-Update: 2021-12-09
  DEFINEFUNC(long, SSL_get_verify_result, const SSL *a, a, return -1, return)
  DEFINEFUNC(SSL *, SSL_new, SSL_CTX *a, a, return nullptr, return)
  DEFINEFUNC(SSL_CTX *, SSL_get_SSL_CTX, SSL *a, a, return nullptr, return)
-@@ -489,9 +496,7 @@ DEFINEFUNC(DH *, DH_new, DUMMYARG, DUMMY
+@@ -492,9 +499,7 @@ DEFINEFUNC(DH *, DH_new, DUMMYARG, DUMMY
  DEFINEFUNC(void, DH_free, DH *dh, dh, return, DUMMYARG)
  DEFINEFUNC3(DH *, d2i_DHparams, DH**a, a, const unsigned char **pp, pp, long length, length, return nullptr, return)
  DEFINEFUNC2(int, i2d_DHparams, DH *a, a, unsigned char **p, p, return -1, return)
@@ -123,7 +123,7 @@ Last-Update: 2021-12-09
  DEFINEFUNC3(BIGNUM *, BN_bin2bn, const unsigned char *s, s, int len, len, BIGNUM *ret, ret, return nullptr, return)
  
  #ifndef OPENSSL_NO_EC
-@@ -852,7 +857,6 @@ bool q_resolveOpenSslSymbols()
+@@ -861,7 +866,6 @@ bool q_resolveOpenSslSymbols()
      RESOLVEFUNC(EVP_PKEY_CTX_new)
      RESOLVEFUNC(EVP_PKEY_param_check)
      RESOLVEFUNC(EVP_PKEY_CTX_free)
@@ -131,7 +131,7 @@ Last-Update: 2021-12-09
      RESOLVEFUNC(RSA_bits)
      RESOLVEFUNC(OPENSSL_sk_new_null)
      RESOLVEFUNC(OPENSSL_sk_push)
-@@ -1077,7 +1081,15 @@ bool q_resolveOpenSslSymbols()
+@@ -1100,7 +1104,15 @@ bool q_resolveOpenSslSymbols()
      RESOLVEFUNC(SSL_version)
      RESOLVEFUNC(SSL_get_error)
      RESOLVEFUNC(SSL_get_peer_cert_chain)
@@ -147,7 +147,7 @@ Last-Update: 2021-12-09
      RESOLVEFUNC(SSL_get_verify_result)
      RESOLVEFUNC(SSL_new)
      RESOLVEFUNC(SSL_get_SSL_CTX)
-@@ -1176,9 +1188,7 @@ bool q_resolveOpenSslSymbols()
+@@ -1199,9 +1211,7 @@ bool q_resolveOpenSslSymbols()
      RESOLVEFUNC(DH_free)
      RESOLVEFUNC(d2i_DHparams)
      RESOLVEFUNC(i2d_DHparams)
@@ -159,7 +159,7 @@ Last-Update: 2021-12-09
  #ifndef OPENSSL_NO_EC
 --- a/src/network/ssl/qsslsocket_openssl_symbols_p.h
 +++ b/src/network/ssl/qsslsocket_openssl_symbols_p.h
-@@ -236,7 +236,6 @@ Q_AUTOTEST_EXPORT int q_EVP_PKEY_up_ref(
+@@ -237,7 +237,6 @@ Q_AUTOTEST_EXPORT int q_EVP_PKEY_up_ref(
  EVP_PKEY_CTX *q_EVP_PKEY_CTX_new(EVP_PKEY *pkey, ENGINE *e);
  void q_EVP_PKEY_CTX_free(EVP_PKEY_CTX *ctx);
  int q_EVP_PKEY_param_check(EVP_PKEY_CTX *ctx);
@@ -167,7 +167,7 @@ Last-Update: 2021-12-09
  int q_RSA_bits(RSA *a);
  Q_AUTOTEST_EXPORT int q_OPENSSL_sk_num(OPENSSL_STACK *a);
  Q_AUTOTEST_EXPORT void q_OPENSSL_sk_pop_free(OPENSSL_STACK *a, void (*b)(void *));
-@@ -509,7 +508,6 @@ const SSL_CIPHER *q_SSL_get_current_ciph
+@@ -510,7 +509,6 @@ const SSL_CIPHER *q_SSL_get_current_ciph
  int q_SSL_version(const SSL *a);
  int q_SSL_get_error(SSL *a, int b);
  STACK_OF(X509) *q_SSL_get_peer_cert_chain(SSL *a);
@@ -175,7 +175,7 @@ Last-Update: 2021-12-09
  long q_SSL_get_verify_result(const SSL *a);
  SSL *q_SSL_new(SSL_CTX *a);
  SSL_CTX *q_SSL_get_SSL_CTX(SSL *a);
-@@ -581,10 +579,7 @@ DH *q_DH_new();
+@@ -582,10 +580,7 @@ DH *q_DH_new();
  void q_DH_free(DH *dh);
  DH *q_d2i_DHparams(DH **a, const unsigned char **pp, long length);
  int q_i2d_DHparams(DH *a, unsigned char **p);
@@ -186,7 +186,7 @@ Last-Update: 2021-12-09
  
  BIGNUM *q_BN_bin2bn(const unsigned char *s, int len, BIGNUM *ret);
  #define q_SSL_CTX_set_tmp_dh(ctx, dh) q_SSL_CTX_ctrl((ctx), SSL_CTRL_SET_TMP_DH, 0, (char *)dh)
-@@ -751,6 +746,17 @@ void *q_CRYPTO_malloc(size_t num, const
+@@ -754,6 +749,17 @@ void q_CRYPTO_free(void *str, const char
  int q_SSL_CTX_get_security_level(const SSL_CTX *ctx);
  void q_SSL_CTX_set_security_level(SSL_CTX *ctx, int level);
  
